# skills-introduction-to-github

HeiMa.last/: CMakeLists.txt  computerRoom.h  globalFile.h  identity.h  main.cpp  manager.cpp  manager.h  orderFile.cpp  orderFile.h  student.cpp  student.h  teacher.cpp  teacher.h
